--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -3,7 +3,7 @@ name: Laravel Deploy to cPanel
 on:
   push:
     branches:
-      - main  # ou la branche que vous utilisez pour le déploiement
+      - master  # ou la branche que vous utilisez pour le déploiement
 
 jobs:
   deploy:
